# natega

./: .gitignore  Cargo.toml  asset-manifest.json  ecosystem.config.js  index.html  package-lock.json  package.json  readme.md
client/: package-lock.json  package.json
client/src/: App.tsx  index.css
client/src/components/: AllResults.tsx  Search.tsx
client/src/constants/: index.ts
node/: package-lock.json  package.json
node/src/: db.ts  index.ts  seed.ts
node/src/controllers/: result.ts
node/src/middlewares/: errorHandler.ts
node/src/models/: StudentResult.ts  StudentResult.tsx
node/src/repo/: resultRepo.ts
node/src/routes/: resultRouter.ts
node/src/utils/: responseError.ts
src/: load.rs  main.rs  result.rs
static/css/: main.07c9dd81.css
static/js/: main.5ed633ba.js  main.5ed633ba.js.map
