[package]
name = "natega"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
html_parser = "0.6.3"
select = "0.5.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
colored = "2.0.0"